# game-promo-radar

./: .gitignore  CAMPAIGN_DISCOVERY_DESIGN.md  CURRENT_PROJECT_AUDIT.md  DATABASE_PATH_REPORT.md  DATA_SOURCE_ARCHITECTURE.md  DISCOVERY_RUNTIME_REPORT.md  DISCOVERY_TEST_REPORT.md  IMPLEMENTATION_REPORT.md  PLATFORM_SOURCE_LIST.yaml  README.md  REAL_COLLECTION_DIAGNOSIS.md  REAL_COLLECTION_RUNTIME_REPORT.md  REAL_COLLECTION_TEST_REPORT.md  REAL_SOURCE_IMPLEMENTATION_REPORT.md  SOURCE_CAPABILITY_REPORT.md  SYNC_COMPLETION_REPORT.md  SYNC_DIFF_REPORT.md  TEST_REPORT.md  WINDOWS_SCHEDULER_GUIDE.md  ZERO_DATA_DIAGNOSIS.md  app.py  health_check.py  install.bat  pyproject.toml  requirements.txt  run.bat  run_all_discovery.bat  run_once_collect.py  run_public_sources.bat  run_search_discovery.bat  start.bat  stop.bat
config/: intel_sources.yaml  scoring.yaml  sources.yaml
data/snapshots/: douyin_game_publisher-1162188148199851342.html  douyin_game_publisher-7431375643866432152.html  douyin_game_publisher-8809951590664772609.html  kuaishou_spark-4196793711417967855.html
scripts/: stop_streamlit.ps1
src/game_promo_radar/: analysis.py  campaigns.py  db.py  discovery.py  extractors.py  intel.py  models.py  online_collect.py  rules.py  scheduler.py  sources.py  ui.py
src/game_promo_radar/adapters/: base.py  manual.py  mediacrawler.py  playwright_login.py  public_web.py
tests/: test_campaign_system.py  test_core.py  test_discovery_runtime.py  test_extractors.py  test_intel_entry.py
tests/fixtures/: manual_tasks.csv  manual_tasks.xlsx
